# llm-security-hackathon

./: .gitignore  AZURE_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  README.md  SECURITY.md  requirements.txt
ci/: policy.yaml
docs/: DPIA.md  DataClassification.md  Environments.md  SLOs.md  Targeting.md  ThreatModel.md  target.md
frontend/: README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
mock-upstream/: Dockerfile  azure-server-vulnerable.js  azure-server.js  ollama-server.js  package-lock.json  package.json  server.js  vertex-server.js
report/: generator.py
rt-harness/: README.md  pyproject.toml
rt-harness/attacks/seeds/: azure-seed-01.json  azure-seed-02.json  azure-seed-03.json  azure-seed-04.json  azure-seed-05.json  seed-01.json  seed-02.json  seed-03.json  seed-04.json  seed-05.json  seed-06.json  seed-07.json  seed-08.json  seed-09.json  seed-10.json  seed-11.json  seed-12.json  seed-13.json  seed-14.json  seed-15.json  seed-16.json  seed-17.json  seed-18.json  seed-19.json  seed-20.json  seed-21.json  seed-22.json  seed-23.json  seed-24.json  seed-25.json  seed-26.json
rt-harness/rt_harness/: __init__.py  cli.py  evidence.py  policy.py  runner.py  sarif.py
rt-harness/rt_harness.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: scrub_evidence_timestamps.py  seed-evidence.py  startA.ps1  startB.ps1
sidecar/: .dockerignore  Dockerfile  minimal-sidecar.cjs  package-lock.json  package.json  sidecar-target-a.config.yaml  sidecar-target-b.config.yaml  simple-sidecar.cjs  test.json
(+19 files in other folders)
